--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,16 @@
 {
   "name": "Okra",
   "title": "Okra - Angular Client",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": false,
   "repository": "http://github.com/dmonay/okra-client.git",
   "authors": [
-  "Pedro Cunha <pdero.spinsomewebs@gmail.com>",
+    "Pedro Cunha <pdero.spinsomewebs@gmail.com>",
     "Dmitry Pavluk <pavluk73@gmail.com.com>"
   ],
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
     "app/libs",
     "Gruntfile.js",
     "package.json",
@@ -20,16 +19,15 @@
   ],
   "dependencies": {
     "angular": "1.3.6",
-    "angular-sanitize": "1.3.7",
-    "angular-animate": "1.3.7",
-    "jquery": "~1.11.11",
-    "angular-ui-router": "*",
-    "angular-flash": "~0.1.13",
-    "angular-local-storage": "~0.0.5",
-    "angular-toggle-switch": "~0.3.0",
-    "animate-scss": "~1.0.0",
+    "jquery": "2.1.1",
+    "angular-ui-router": "0.2.13",
+    "angular-bootstrap": "~0.12.0",
+    "bootstrap-sass-official": "~3.3.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.19"
+  },
+  "resolutions": {
+    "angular": "1.3.6"
   }
 }
