--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "grunt-usemin": "^2.0.2",
     "karma": "~0.12.0",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-coverage": "^0.2.6",]
+    "karma-coverage": "^0.2.6",
     "karma-jasmine": "^0.2.2",
     "karma-junit-reporter": "^0.2.2",
     "karma-ng-scenario": "~0.1",
@@ -63,7 +63,7 @@
     "time-grunt": "^0.2.10"
   },
   "scripts": {
-    "postinstall": "grunt githooks && bower install && grunt newer:lodash",
+    "postinstall": "bower install",
     "start": "grunt serve",
     "test": "grunt test:watch",
     "build": "grunt dist"
