--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
     "angular": "1.3.6",
     "jquery": "2.1.1",
     "angular-ui-router": "0.2.13",
-    "angular-bootstrap": "~0.12.0",
-    "bootstrap-sass-official": "~3.3.1"
+    "angular-bootstrap": "~0.12.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.19"
