--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "bower": "~1.3.1",
+    "chromedriver": "^2.12.0",
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "^0.7.5",
     "grunt-cli": "~0.1.13",
