--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-connect": "^0.6.0",
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-htmlmin": "^0.2.0",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-livereload": "^0.1.2",
