--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "angular": "1.3.6",
     "angular-ui-router": "0.2.13",
-    "angular-material": "master"
+    "angular-material": "master",
+    "hammerjs": "2.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
