--- a/bower.json
+++ b/bower.json
@@ -20,12 +20,13 @@
   "dependencies": {
     "angular": "1.3.6",
     "angular-ui-router": "0.2.13",
-    "angular-material": "master"
+    "angular-material": "master",
+    "angular-cookies": "~1.3.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
   },
   "resolutions": {
-    "angular": "1.3.6"
+    "angular": "1.3.13"
   }
 }
