--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "angular": "1.3.6",
     "angular-ui-router": "0.2.13",
     "angular-material": "master",
-    "angular-cookies": "~1.3.13"
+    "angular-cookie": "~4.0.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
