--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-ngdocs": "^0.2.6",
     "grunt-ngmin": "0.0.3",
     "grunt-protractor-runner": "1.0.0",
+    "grunt-replace": "^0.8.0",
     "grunt-sauce-connect-launcher": "^0.3.0",
     "grunt-shell": "^0.7.0",
     "grunt-usemin": "^2.0.2",
